@@ -25,8 +25,13 @@ import static android.net.wifi.WifiConfiguration.METERED_OVERRIDE_METERED;
 import static android.net.wifi.WifiManager.ACTION_REMOVE_SUGGESTION_DISCONNECT;
 import static android.net.wifi.WifiManager.ACTION_REMOVE_SUGGESTION_LINGER;
 import static android.net.wifi.WifiManager.LocalOnlyHotspotCallback.REQUEST_REGISTERED;
+import static android.net.wifi.WifiManager.VERBOSE_LOGGING_LEVEL_DISABLED;
+import static android.net.wifi.WifiManager.VERBOSE_LOGGING_LEVEL_WIFI_AWARE_ENABLED_ONLY;
 import static android.net.wifi.WifiManager.WIFI_STATE_DISABLED;
 import static android.net.wifi.WifiManager.WIFI_STATE_ENABLED;
+import static android.net.wifi.WifiManager.ROAMING_MODE_NONE;
+import static android.net.wifi.WifiManager.ROAMING_MODE_NORMAL;
+import static android.net.wifi.WifiManager.ROAMING_MODE_AGGRESSIVE;
 
 import static com.android.server.wifi.HalDeviceManager.HDM_CREATE_IFACE_AP;
 import static com.android.server.wifi.HalDeviceManager.HDM_CREATE_IFACE_AP_BRIDGE;
@@ -40,6 +45,8 @@ import android.content.Context;
 import android.content.Intent;
 import android.content.IntentFilter;
 import android.hardware.display.DisplayManager;
+import android.location.Location;
+import android.location.LocationManager;
 import android.net.ConnectivityManager;
 import android.net.MacAddress;
 import android.net.Network;
@@ -57,6 +64,7 @@ import android.net.wifi.ScanResult;
 import android.net.wifi.SoftApCapability;
 import android.net.wifi.SoftApConfiguration;
 import android.net.wifi.SoftApInfo;
+import android.net.wifi.SoftApState;
 import android.net.wifi.SupplicantState;
 import android.net.wifi.WifiAvailableChannel;
 import android.net.wifi.WifiClient;
@@ -71,6 +79,7 @@ import android.net.wifi.WifiNetworkSuggestion;
 import android.net.wifi.WifiScanner;
 import android.net.wifi.WifiSsid;
 import android.net.wifi.util.ScanResultUtil;
+import android.net.wifi.util.WifiResourceCache;
 import android.os.Binder;
 import android.os.Build;
 import android.os.Bundle;
@@ -101,6 +110,7 @@ import com.android.modules.utils.build.SdkLevel;
 import com.android.server.wifi.ClientMode.LinkProbeCallback;
 import com.android.server.wifi.coex.CoexManager;
 import com.android.server.wifi.coex.CoexUtils;
+import com.android.server.wifi.hal.WifiChip;
 import com.android.server.wifi.hotspot2.NetworkDetail;
 import com.android.server.wifi.util.ApConfigUtil;
 import com.android.server.wifi.util.ArrayUtils;
@@ -115,6 +125,7 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -144,6 +155,8 @@ public class WifiShellCommand extends BasicShellCommandHandler {
     private static final String[] NON_PRIVILEGED_COMMANDS = {
             "add-suggestion",
             "forget-network",
+            "connect-network",
+            "add-network",
             "get-country-code",
             "help",
             "-h",
@@ -161,9 +174,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
             "set-passpoint-enabled",
             "set-multi-internet-state",
             "start-scan",
-            "start-softap",
             "status",
-            "stop-softap",
             "query-interface",
             "interface-priority-interactive-mode",
             "set-one-shot-screen-on-delay-ms",
@@ -172,6 +183,12 @@ public class WifiShellCommand extends BasicShellCommandHandler {
             "get-ipreach-disconnect",
             "take-bugreport",
             "get-allowed-channel",
+            "set-mock-wifimodem-service",
+            "get-mock-wifimodem-service",
+            "set-mock-wifimodem-methods",
+            "force-overlay-config-value",
+            "get-softap-supported-features",
+            "get-overlay-config-values"
     };
 
     private static final Map<String, Pair<NetworkRequest, ConnectivityManager.NetworkCallback>>
@@ -202,6 +219,8 @@ public class WifiShellCommand extends BasicShellCommandHandler {
     private final SsidTranslator mSsidTranslator;
     private final WifiDiagnostics mWifiDiagnostics;
     private final DeviceConfigFacade mDeviceConfig;
+    private final AfcManager mAfcManager;
+    private final WifiInjector mWifiInjector;
     private static final int[] OP_MODE_LIST = {
             WifiAvailableChannel.OP_MODE_STA,
             WifiAvailableChannel.OP_MODE_SAP,
@@ -221,17 +240,17 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         }
 
         @Override
-        public void onStateChanged(int state, int failureReason) {
-            mPrintWriter.println("onStateChanged with state: " + state
-                    + " failure reason: " + failureReason);
-            mSapState = state;
-            if (state == WifiManager.WIFI_AP_STATE_ENABLED) {
+        public void onStateChanged(SoftApState state) {
+            mPrintWriter.println("onStateChanged with state: " + state);
+
+            mSapState = state.getState();
+            if (mSapState == WifiManager.WIFI_AP_STATE_ENABLED) {
                 mPrintWriter.println(" SAP is enabled successfully");
                 // Skip countDown() and wait for onInfoChanged() which has
                 // the confirmed softAp channel information
-            } else if (state == WifiManager.WIFI_AP_STATE_DISABLED) {
+            } else if (mSapState == WifiManager.WIFI_AP_STATE_DISABLED) {
                 mPrintWriter.println(" SAP is disabled");
-            } else if (state == WifiManager.WIFI_AP_STATE_FAILED) {
+            } else if (mSapState == WifiManager.WIFI_AP_STATE_FAILED) {
                 mPrintWriter.println(" SAP failed to start");
                 mCountDownLatch.countDown();
             }
@@ -405,6 +424,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                     + " targetNetworkId=" + targetNetworkId
                     + " targetBssid=" + targetBssid);
         }
+
         @Override
         public void onNetworkSwitchRejected(
                 int sessionId, int targetNetworkId, String targetBssid) {
@@ -425,6 +445,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
 
     WifiShellCommand(WifiInjector wifiInjector, WifiServiceImpl wifiService, WifiContext context,
             WifiGlobals wifiGlobals, WifiThreadRunner wifiThreadRunner) {
+        mWifiInjector = wifiInjector;
         mWifiGlobals = wifiGlobals;
         mWifiThreadRunner = wifiThreadRunner;
         mActiveModeWarden = wifiInjector.getActiveModeWarden();
@@ -449,6 +470,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         mSsidTranslator = wifiInjector.getSsidTranslator();
         mWifiDiagnostics = wifiInjector.getWifiDiagnostics();
         mDeviceConfig = wifiInjector.getDeviceConfigFacade();
+        mAfcManager = wifiInjector.getAfcManager();
     }
 
     private String getOpModeName(@WifiAvailableChannel.OpMode int mode) {
@@ -498,28 +520,70 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                             + mWifiGlobals.getIpReachabilityDisconnectEnabled());
                     return 0;
                 case "set-poll-rssi-interval-msecs":
-                    int newPollIntervalMsecs;
-                    try {
-                        newPollIntervalMsecs = Integer.parseInt(getNextArgRequired());
-                    } catch (NumberFormatException e) {
-                        pw.println(
+                    List<Integer> newPollIntervals = new ArrayList<>();
+                    while (getRemainingArgsCount() > 0) {
+                        int newPollIntervalMsecs;
+                        try {
+                            newPollIntervalMsecs = Integer.parseInt(getNextArgRequired());
+                        } catch (NumberFormatException e) {
+                            pw.println(
                                 "Invalid argument to 'set-poll-rssi-interval-msecs' "
-                                        + "- must be a positive integer");
-                        return -1;
+                                    + "- must be a positive integer");
+                            return -1;
+                        }
+
+                        if (newPollIntervalMsecs < 1) {
+                            pw.println(
+                                "Invalid argument to 'set-poll-rssi-interval-msecs' "
+                                    + "- must be a positive integer");
+                            return -1;
+                        }
+
+                        newPollIntervals.add(newPollIntervalMsecs);
                     }
 
-                    if (newPollIntervalMsecs < 1) {
-                        pw.println(
-                                "Invalid argument to 'set-poll-rssi-interval-msecs' "
-                                        + "- must be a positive integer");
-                        return -1;
+                    switch (newPollIntervals.size()) {
+                        case 0:
+                            throw new IllegalArgumentException(
+                                "Need at least one valid rssi polling interval");
+                        case 1:
+                            mActiveModeWarden.getPrimaryClientModeManager()
+                                    .setLinkLayerStatsPollingInterval(newPollIntervals.get(0));
+                            break;
+                        case 2:
+                            int newShortIntervalMsecs = newPollIntervals.get(0);
+                            int newLongIntervalMsecs = newPollIntervals.get(1);
+                            if (newShortIntervalMsecs >= newLongIntervalMsecs) {
+                                pw.println(
+                                        "Invalid argument to 'set-poll-rssi-interval-msecs' "
+                                                + "- the long polling interval must be greater "
+                                                + "than the short polling interval");
+                                return -1;
+                            }
+                            mWifiGlobals.setPollRssiShortIntervalMillis(newShortIntervalMsecs);
+                            mWifiGlobals.setPollRssiLongIntervalMillis(newLongIntervalMsecs);
+                            mWifiGlobals.setPollRssiIntervalMillis(newShortIntervalMsecs);
+                            mActiveModeWarden.getPrimaryClientModeManager()
+                                    .setLinkLayerStatsPollingInterval(0);
+                            break;
+                        default:
+                            pw.println("Too many arguments, need at most two valid rssi polling "
+                                    + "intervals");
+                            return -1;
                     }
-
-                    mWifiGlobals.setPollRssiIntervalMillis(newPollIntervalMsecs);
                     return 0;
                 case "get-poll-rssi-interval-msecs":
-                    pw.println("WifiGlobals.getPollRssiIntervalMillis() = "
+                    pw.println("Current interval between RSSI polls (milliseconds) = "
                             + mWifiGlobals.getPollRssiIntervalMillis());
+                    if (mWifiGlobals.isAdjustPollRssiIntervalEnabled()
+                            && mDeviceConfig.isAdjustPollRssiIntervalEnabled()
+                            && !mWifiGlobals.isPollRssiIntervalOverridden()) {
+                        pw.println("Auto adjustment of poll rssi is enabled");
+                        pw.println("Regular (short) interval between RSSI polls (milliseconds) = "
+                                + mWifiGlobals.getPollRssiShortIntervalMillis());
+                        pw.println("Long interval between RSSI polls (milliseconds) = "
+                                + mWifiGlobals.getPollRssiLongIntervalMillis());
+                    }
                     return 0;
                 case "force-hi-perf-mode": {
                     boolean enabled = getNextArgRequiredTrueOrFalse("enabled", "disabled");
@@ -538,8 +602,10 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                 case "network-suggestions-set-user-approved": {
                     String packageName = getNextArgRequired();
                     boolean approved = getNextArgRequiredTrueOrFalse("yes", "no");
-                    mWifiNetworkSuggestionsManager.setHasUserApprovedForApp(approved,
-                            Binder.getCallingUid(), packageName);
+                    mWifiThreadRunner.post(() -> mWifiNetworkSuggestionsManager
+                            .setHasUserApprovedForApp(approved,
+                                    Binder.getCallingUid(), packageName),
+                            "shell#setHasUserApprovedForApp");
                     return 0;
                 }
                 case "network-suggestions-has-user-approved": {
@@ -583,21 +649,23 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                 }
                 case "imsi-protection-exemption-clear-user-approved-for-carrier": {
                     String arg1 = getNextArgRequired();
-                    int carrierId = -1;
                     try {
-                        carrierId = Integer.parseInt(arg1);
+                        final int carrierId = Integer.parseInt(arg1);
+                        mWifiThreadRunner.post(() ->
+                                mWifiCarrierInfoManager.clearImsiPrivacyExemptionForCarrier(
+                                        carrierId), TAG + "#" + cmd);
                     } catch (NumberFormatException e) {
                         pw.println("Invalid argument to "
                                 + "'imsi-protection-exemption-clear-user-approved-for-carrier' "
                                 + "- 'carrierId' must be an Integer");
                         return -1;
                     }
-                    mWifiCarrierInfoManager.clearImsiPrivacyExemptionForCarrier(carrierId);
                     return 0;
                 }
                 case "network-requests-remove-user-approved-access-points": {
                     String packageName = getNextArgRequired();
-                    mWifiNetworkFactory.removeApp(packageName);
+                    mWifiThreadRunner.post(() -> mWifiNetworkFactory.removeApp(packageName),
+                            TAG + "#" + cmd);
                     return 0;
                 }
                 case "clear-user-disabled-networks": {
@@ -626,13 +694,16 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                         String forcedBand = getNextArgRequired();
                         if (forcedBand.equals("2")) {
                             mWifiApConfigStore.enableForceSoftApBandOrChannel(
-                                    SoftApConfiguration.BAND_2GHZ, 0);
+                                    SoftApConfiguration.BAND_2GHZ, 0,
+                                    SoftApInfo.CHANNEL_WIDTH_AUTO);
                         } else if (forcedBand.equals("5")) {
                             mWifiApConfigStore.enableForceSoftApBandOrChannel(
-                                    SoftApConfiguration.BAND_5GHZ, 0);
+                                    SoftApConfiguration.BAND_5GHZ, 0,
+                                    SoftApInfo.CHANNEL_WIDTH_AUTO);
                         } else if (forcedBand.equals("6")) {
                             mWifiApConfigStore.enableForceSoftApBandOrChannel(
-                                    SoftApConfiguration.BAND_6GHZ, 0);
+                                    SoftApConfiguration.BAND_6GHZ, 0,
+                                    SoftApInfo.CHANNEL_WIDTH_AUTO);
                         } else {
                             pw.println("Invalid argument to 'force-softap-band enabled' "
                                     + "- must be a valid band integer (2|5|6)");
@@ -649,8 +720,25 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                     boolean enabled = getNextArgRequiredTrueOrFalse("enabled", "disabled");
                     if (enabled) {
                         int apChannelMHz;
+                        int apMaxBandWidthMHz = 0;
                         try {
                             apChannelMHz = Integer.parseInt(getNextArgRequired());
+                            String option = getNextOption();
+                            if (option != null && option.equals("-w")) {
+                                if (!SdkLevel.isAtLeastT()) {
+                                    pw.println("Maximum channel bandwidth can be set only on"
+                                            + " SdkLevel T or later.");
+                                    return -1;
+                                }
+                                String bandwidthStr = getNextArgRequired();
+                                try {
+                                    apMaxBandWidthMHz = Integer.parseInt(bandwidthStr);
+                                } catch (NumberFormatException e) {
+                                    pw.println("Invalid maximum channel bandwidth arg: "
+                                            + bandwidthStr);
+                                    return -1;
+                                }
+                            }
                         } catch (NumberFormatException e) {
                             pw.println("Invalid argument to 'force-softap-channel enabled' "
                                     + "- must be a positive integer");
@@ -659,7 +747,32 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                         int apChannel = ScanResult.convertFrequencyMhzToChannelIfSupported(
                                 apChannelMHz);
                         int band = ApConfigUtil.convertFrequencyToBand(apChannelMHz);
-                        pw.println("channel: " + apChannel + " band: " + band);
+                        int apMaxBandWidth;
+                        switch (apMaxBandWidthMHz) {
+                            case 0:
+                                apMaxBandWidth = SoftApInfo.CHANNEL_WIDTH_AUTO;
+                                break;
+                            case 20:
+                                apMaxBandWidth = SoftApInfo.CHANNEL_WIDTH_20MHZ;
+                                break;
+                            case 40:
+                                apMaxBandWidth = SoftApInfo.CHANNEL_WIDTH_40MHZ;
+                                break;
+                            case 80:
+                                apMaxBandWidth = SoftApInfo.CHANNEL_WIDTH_80MHZ;
+                                break;
+                            case 160:
+                                apMaxBandWidth = SoftApInfo.CHANNEL_WIDTH_160MHZ;
+                                break;
+                            case 320:
+                                apMaxBandWidth = SoftApInfo.CHANNEL_WIDTH_320MHZ;
+                                break;
+                            default:
+                                pw.println("Invalid max channel bandwidth " + apMaxBandWidthMHz);
+                                return -1;
+                        }
+                        pw.println("channel: " + apChannel + " band: " + band
+                                + " maximum channel bandwidth: " + apMaxBandWidthMHz);
                         if (apChannel == -1 || band == -1) {
                             pw.println("Invalid argument to 'force-softap-channel enabled' "
                                     + "- must be a valid WLAN channel");
@@ -687,7 +800,8 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                                     + " in a band supported by the device");
                             return -1;
                         }
-                        mWifiApConfigStore.enableForceSoftApBandOrChannel(band, apChannel);
+                        mWifiApConfigStore.enableForceSoftApBandOrChannel(band, apChannel,
+                                apMaxBandWidth);
                         return 0;
                     } else {
                         mWifiApConfigStore.disableForceSoftApBandOrChannel();
@@ -748,6 +862,12 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                         return -1;
                     }
                     mWifiService.clearExternalPnoScanRequest();
+                    return 0;
+                }
+                case "set-pno-scan": {
+                    boolean enabled = getNextArgRequiredTrueOrFalse("enabled", "disabled");
+                    mWifiService.setPnoScanEnabled(enabled, true /*enablePnoScanAfterWifiToggle*/,
+                            mContext.getOpPackageName());
                     return 0;
                 }
                 case "start-lohs": {
@@ -900,7 +1020,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                     return 0;
                 case "list-scan-results":
                     List<ScanResult> scanResults =
-                            mWifiService.getScanResults(SHELL_PACKAGE_NAME, null);
+                            mScanRequestProxy.getScanResults();
                     if (scanResults.isEmpty()) {
                         pw.println("No scan results");
                     } else {
@@ -946,10 +1066,8 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                         }
                     };
                     WifiConfiguration config = buildWifiConfiguration(pw);
-                    mWifiService.connect(config, -1, actionListener, SHELL_PACKAGE_NAME);
-                    // wait for status.
-                    countDownLatch.await(500, TimeUnit.MILLISECONDS);
-                    setAutoJoin(pw, config.SSID, config.allowAutojoin);
+                    mWifiService.connect(config, -1, actionListener, SHELL_PACKAGE_NAME,
+                            new Bundle());
                     return 0;
                 }
                 case "add-network": {
@@ -969,9 +1087,6 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                     };
                     WifiConfiguration config = buildWifiConfiguration(pw);
                     mWifiService.save(config, actionListener, SHELL_PACKAGE_NAME);
-                    // wait for status.
-                    countDownLatch.await(500, TimeUnit.MILLISECONDS);
-                    setAutoJoin(pw, config.SSID, config.allowAutojoin);
                     return 0;
                 }
                 case "forget-network": {
@@ -1011,7 +1126,23 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                     return 0;
                 case "set-verbose-logging": {
                     boolean enabled = getNextArgRequiredTrueOrFalse("enabled", "disabled");
-                    mWifiService.enableVerboseLogging(enabled ? 1 : 0);
+                    String levelOption = getNextOption();
+                    int level = enabled ? 1 : 0;
+                    if (enabled && levelOption != null && levelOption.equals("-l")) {
+                        String levelStr = getNextArgRequired();
+                        try {
+                            level = Integer.parseInt(levelStr);
+                            if (level < VERBOSE_LOGGING_LEVEL_DISABLED
+                                    || level > VERBOSE_LOGGING_LEVEL_WIFI_AWARE_ENABLED_ONLY) {
+                                pw.println("Not a valid log level: " + level);
+                                return -1;
+                            }
+                        } catch (NumberFormatException e) {
+                            pw.println("Invalid verbose-logging level : " + levelStr);
+                            return -1;
+                        }
+                    }
+                    mWifiService.enableVerboseLogging(level);
                     return 0;
                 }
                 case "is-verbose-logging": {
@@ -1043,7 +1174,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                         return -1;
                     }
                     int errorCode = mWifiService.addNetworkSuggestions(
-                            Arrays.asList(suggestion), SHELL_PACKAGE_NAME, null);
+                            new ParceledListSlice(List.of(suggestion)), SHELL_PACKAGE_NAME, null);
                     if (errorCode != WifiManager.STATUS_NETWORK_SUGGESTIONS_SUCCESS) {
                         pw.println("Add network suggestion failed with error code: " + errorCode);
                         return -1;
@@ -1084,7 +1215,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                         actionCode = ACTION_REMOVE_SUGGESTION_LINGER;
                     }
                     List<WifiNetworkSuggestion> suggestions =
-                            mWifiService.getNetworkSuggestions(SHELL_PACKAGE_NAME);
+                            mWifiService.getNetworkSuggestions(SHELL_PACKAGE_NAME).getList();
                     WifiNetworkSuggestion suggestion = suggestions.stream()
                             .filter(s -> s.getSsid().equals(ssid))
                             .findAny()
@@ -1094,7 +1225,8 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                         return -1;
                     }
                     mWifiService.removeNetworkSuggestions(
-                            Arrays.asList(suggestion), SHELL_PACKAGE_NAME, actionCode);
+                            new ParceledListSlice<>(List.of(suggestion)),
+                            SHELL_PACKAGE_NAME, actionCode);
                     // untrusted/oem-paid networks need a corresponding NetworkRequest.
                     if (suggestion.isUntrusted()
                             || (SdkLevel.isAtLeastS()
@@ -1112,12 +1244,12 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                 }
                 case "remove-all-suggestions":
                     mWifiService.removeNetworkSuggestions(
-                            Collections.emptyList(), SHELL_PACKAGE_NAME,
+                            new ParceledListSlice<>(Collections.emptyList()), SHELL_PACKAGE_NAME,
                             WifiManager.ACTION_REMOVE_SUGGESTION_DISCONNECT);
                     return 0;
                 case "list-suggestions": {
                     List<WifiNetworkSuggestion> suggestions =
-                            mWifiService.getNetworkSuggestions(SHELL_PACKAGE_NAME);
+                            mWifiService.getNetworkSuggestions(SHELL_PACKAGE_NAME).getList();
                     printWifiNetworkSuggestions(pw, suggestions);
                     return 0;
                 }
@@ -1130,7 +1262,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                 case "list-suggestions-from-app": {
                     String packageName = getNextArgRequired();
                     List<WifiNetworkSuggestion> suggestions =
-                            mWifiService.getNetworkSuggestions(packageName);
+                            mWifiService.getNetworkSuggestions(packageName).getList();
                     printWifiNetworkSuggestions(pw, suggestions);
                     return 0;
                 }
@@ -1146,7 +1278,10 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                     ConnectivityManager.NetworkCallback networkCallback =
                             new ConnectivityManager.NetworkCallback();
                     pw.println("Adding request: " + networkRequest);
-                    mConnectivityManager.requestNetwork(networkRequest, networkCallback);
+                    mWifiThreadRunner.post(() -> mConnectivityManager
+                                    .requestNetwork(networkRequest, networkCallback),
+                            "shell#add-request");
+
                     sActiveRequests.put(ssid, Pair.create(networkRequest, networkCallback));
                     return 0;
                 }
@@ -1159,7 +1294,9 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                         return -1;
                     }
                     pw.println("Removing request: " + nrAndNc.first);
-                    mConnectivityManager.unregisterNetworkCallback(nrAndNc.second);
+                    mWifiThreadRunner.post(() -> mConnectivityManager
+                                    .unregisterNetworkCallback(nrAndNc.second),
+                            "shell#remove-request");
                     return 0;
                 }
                 case "remove-all-requests":
@@ -1170,7 +1307,9 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                     for (Pair<NetworkRequest, ConnectivityManager.NetworkCallback> nrAndNc
                             : sActiveRequests.values()) {
                         pw.println("Removing request: " + nrAndNc.first);
-                        mConnectivityManager.unregisterNetworkCallback(nrAndNc.second);
+                        mWifiThreadRunner.post(() ->
+                                mConnectivityManager.unregisterNetworkCallback(nrAndNc.second),
+                                "shell#remove-request");
                     }
                     sActiveRequests.clear();
                     return 0;
@@ -1775,35 +1914,277 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                     return 0;
                 }
                 case "get-allowed-channel": {
-                    WifiManager wifiManager = mContext.getSystemService(WifiManager.class);
-                    WifiScanner wifiScanner = mContext.getSystemService(WifiScanner.class);
-                    List<WifiAvailableChannel> allowedChannels;
-                    List<Integer> availableChannels;
+                    StringBuilder allowedChannel = new StringBuilder();
+                    int band = WifiScanner.WIFI_BAND_24_5_WITH_DFS_6_GHZ;
 
-                    for (int opMode : OP_MODE_LIST) {
-                        String allowedChannel = "";
-                        try {
-                            allowedChannels = wifiManager.getAllowedChannels(
-                                    WifiScanner.WIFI_BAND_24_5_WITH_DFS_6_GHZ, opMode);
-                            for (WifiAvailableChannel channel : allowedChannels) {
-                                allowedChannel += channel.getFrequencyMhz() + " ";
-                            }
-                            pw.println("Allowed ch in " + getOpModeName(opMode) + " mode:\n"
-                                    + allowedChannel);
-                        } catch (UnsupportedOperationException e) {
-                            availableChannels = wifiScanner.getAvailableChannels(
-                                    WifiScanner.WIFI_BAND_24_5_WITH_DFS_6_GHZ);
-                            for (Integer channel : availableChannels) {
-                                allowedChannel += channel + " ";
-                            }
-                            /* In this case, all mode has same allowed channel list. So
-                            immediately return */
-                            pw.println("Allowed ch in all mode:\n" + allowedChannel);
-                            return 0;
+                    String option = getNextOption();
+                    while (option != null) {
+                        if (option.equals("-b")) {
+                            band = Integer.parseInt(getNextArgRequired());
+                        } else {
+                            pw.println("Ignoring unknown option: " + option);
+                            return -1;
                         }
+                        option = getNextOption();
+                    }
+
+                    try {
+                        Bundle extras = new Bundle();
+                        if (SdkLevel.isAtLeastS()) {
+                            extras.putParcelable(WifiManager.EXTRA_PARAM_KEY_ATTRIBUTION_SOURCE,
+                                    mContext.getAttributionSource());
+                        } else {
+                            throw new UnsupportedOperationException();
+                        }
+                        // The option "-b 2" (getting band 5ghz active channels) is valid for old
+                        // devices, but invalid for new devices. So we first check if device
+                        // supports getUsableChannels() API.
+                        mWifiService.getUsableChannels(WifiScanner.WIFI_BAND_24_5_WITH_DFS_6_GHZ,
+                                WifiAvailableChannel.OP_MODE_STA,
+                                WifiAvailableChannel.FILTER_REGULATORY, SHELL_PACKAGE_NAME, extras);
+                        try {
+                            for (int opMode : OP_MODE_LIST) {
+                                List<WifiAvailableChannel> usableChannels =
+                                        mWifiService.getUsableChannels(band, opMode,
+                                                WifiAvailableChannel.FILTER_REGULATORY,
+                                                SHELL_PACKAGE_NAME, extras);
+                                allowedChannel = new StringBuilder();
+                                for (WifiAvailableChannel channel : usableChannels) {
+                                    allowedChannel.append(channel.getFrequencyMhz()).append(" ");
+                                }
+                                pw.println("Allowed ch in " + getOpModeName(opMode) + " mode:\n"
+                                        + allowedChannel);
+                            }
+                        } catch (IllegalArgumentException e) {
+                            pw.println("Invalid band: " + band);
+                            return -1;
+                        }
+                    } catch (UnsupportedOperationException e) {
+                        WifiScanner wifiScanner = mContext.getSystemService(WifiScanner.class);
+                        try {
+                            List<Integer> availableChannels = wifiScanner.getAvailableChannels(
+                                    band);
+                            for (Integer channel : availableChannels) {
+                                allowedChannel.append(channel).append(" ");
+                            }
+                            pw.println("Allowed ch in all modes:\n" + allowedChannel);
+                        } catch (SecurityException securityException) {
+                            pw.println("Permission is required.");
+                            return -1;
+                        }
+                    } catch (SecurityException e) {
+                        pw.println("Permission is required.");
+                        return -1;
                     }
                     return 0;
                 }
+                case "trigger-afc-location-update":
+                    Double longitude = Double.parseDouble(getNextArgRequired());
+                    Double latitude = Double.parseDouble(getNextArgRequired());
+                    Double height = Double.parseDouble(getNextArgRequired());
+                    Location location = new Location(LocationManager.FUSED_PROVIDER);
+                    location.setLongitude(longitude);
+                    location.setLatitude(latitude);
+                    location.setAltitude(height);
+                    mWifiThreadRunner.post(() -> mAfcManager.onLocationChange(location, true),
+                            TAG + "#" + cmd);
+                    pw.println("The updated location with longitude of " + longitude + " degrees, "
+                            + "latitude of " + latitude + " degrees, and height of " + height
+                            + " meters was passed into the Afc Manager onLocationChange method.");
+                    return 0;
+                case "set-afc-channel-allowance": {
+                    WifiChip.AfcChannelAllowance afcChannelAllowance =
+                            new WifiChip.AfcChannelAllowance();
+                    boolean expiryTimeArgumentIncluded = false;
+                    boolean frequencyOrChannelArgumentIncluded = false;
+                    afcChannelAllowance.availableAfcFrequencyInfos = new ArrayList<>();
+                    afcChannelAllowance.availableAfcChannelInfos = new ArrayList<>();
+
+                    String option;
+                    while ((option = getNextOption()) != null) {
+                        switch (option) {
+                            case "-e": {
+                                int secondsUntilExpiry = Integer.parseInt(getNextArgRequired());
+                                // AfcChannelAllowance requires this field to be a UNIX timestamp
+                                // in milliseconds.
+                                afcChannelAllowance.availabilityExpireTimeMs =
+                                        System.currentTimeMillis() + secondsUntilExpiry * 1000;
+                                expiryTimeArgumentIncluded = true;
+
+                                break;
+                            }
+                            case "-f": {
+                                frequencyOrChannelArgumentIncluded = true;
+                                String frequenciesInput = getNextArgRequired();
+
+                                if (frequenciesInput.equals(("none"))) {
+                                    break;
+                                }
+
+                                // parse frequency list, and add it to the AfcChannelAllowance
+                                String[] unparsedFrequencies = frequenciesInput.split(":");
+                                afcChannelAllowance.availableAfcFrequencyInfos = new ArrayList<>();
+
+                                for (int i = 0; i < unparsedFrequencies.length; ++i) {
+                                    String[] frequencyPieces = unparsedFrequencies[i].split(",");
+
+                                    if (frequencyPieces.length != 3) {
+                                        throw new IllegalArgumentException("Each frequency in the "
+                                                + "available frequency list should have 3 values, "
+                                                + "but found one with " + frequencyPieces.length);
+                                    }
+
+                                    WifiChip.AvailableAfcFrequencyInfo frequencyInfo = new
+                                            WifiChip.AvailableAfcFrequencyInfo();
+
+                                    frequencyInfo.startFrequencyMhz =
+                                            Integer.parseInt(frequencyPieces[0]);
+                                    frequencyInfo.endFrequencyMhz =
+                                            Integer.parseInt(frequencyPieces[1]);
+                                    frequencyInfo.maxPsdDbmPerMhz =
+                                            Integer.parseInt(frequencyPieces[2]);
+
+                                    afcChannelAllowance.availableAfcFrequencyInfos
+                                                    .add(frequencyInfo);
+                                }
+
+                                break;
+                            }
+                            case "-c": {
+                                frequencyOrChannelArgumentIncluded = true;
+                                String channelsInput = getNextArgRequired();
+
+                                if (channelsInput.equals("none")) {
+                                    break;
+                                }
+
+                                // parse channel list, and add it to the AfcChannelAllowance
+                                String[] unparsedChannels = channelsInput.split(":");
+                                afcChannelAllowance.availableAfcChannelInfos = new ArrayList<>();
+
+                                for (int i = 0; i < unparsedChannels.length; ++i) {
+                                    String[] channelPieces = unparsedChannels[i].split(",");
+
+                                    if (channelPieces.length != 3) {
+                                        throw new IllegalArgumentException("Each channel in the "
+                                                + "available channel list should have 3 values, "
+                                                + "but found one with " + channelPieces.length);
+                                    }
+
+                                    WifiChip.AvailableAfcChannelInfo channelInfo = new
+                                            WifiChip.AvailableAfcChannelInfo();
+
+                                    channelInfo.globalOperatingClass =
+                                            Integer.parseInt(channelPieces[0]);
+                                    channelInfo.channelCfi = Integer.parseInt(channelPieces[1]);
+                                    channelInfo.maxEirpDbm = Integer.parseInt(channelPieces[2]);
+
+                                    afcChannelAllowance.availableAfcChannelInfos.add(channelInfo);
+                                }
+
+                                break;
+                            }
+                            default: {
+                                pw.println("Unrecognized command line argument.");
+                                return -1;
+                            }
+                        }
+                    }
+                    if (!expiryTimeArgumentIncluded) {
+                        pw.println("Please include the -e flag to set the seconds until the "
+                                + "availability expires.");
+                        return -1;
+                    }
+                    if (!frequencyOrChannelArgumentIncluded) {
+                        pw.println("Please include at least one of the -f or -c flags to set the "
+                                + "frequency or channel availability.");
+                        return -1;
+                    }
+
+                    ArrayBlockingQueue<String> queue = new ArrayBlockingQueue<>(1);
+                    mWifiThreadRunner.post(() -> {
+                        if (mWifiNative.setAfcChannelAllowance(afcChannelAllowance)) {
+                            queue.offer("Successfully set the allowed AFC channels and "
+                                    + "frequencies.");
+                        } else {
+                            queue.offer("Setting the allowed AFC channels and frequencies "
+                                    + "failed.");
+                        }
+                    }, TAG + "#" + cmd);
+
+                    // block until msg is received, or timed out
+                    String msg = queue.poll(3000, TimeUnit.MILLISECONDS);
+                    if (msg == null) {
+                        pw.println("Setting the allowed AFC channels and frequencies timed out.");
+                    } else {
+                        pw.println(msg);
+                    }
+
+                    return 0;
+                }
+                case "get-cached-scan-data":
+                    WifiScanner.ScanData scanData =
+                            mWifiNative.getCachedScanResultsFromAllClientIfaces();
+
+                    if (scanData.getResults().length > 0) {
+                        pw.println("Successfully get cached scan data: ");
+                        for (ScanResult scanResult : scanData.getResults()) {
+                            pw.println(scanResult);
+                        }
+                    } else {
+                        pw.println("Cached scan data is empty");
+                    }
+                    return 0;
+                case "configure-afc-server":
+                    final String url = getNextArgRequired();
+
+                    if (!url.startsWith("http")) {
+                        pw.println("The required URL first argument is not a valid server URL for"
+                                + " a HTTP request.");
+                        return -1;
+                    }
+
+                    String secondOption = getNextOption();
+                    Map<String, String> requestProperties = new HashMap<>();
+                    if (secondOption != null && secondOption.equals("-r")) {
+
+                        String key = getNextArg();
+                        while (key != null) {
+
+                            String value = getNextArg();
+                            // Check if there is a next value
+                            if (value != null) {
+                                requestProperties.put(key, value);
+                            } else {
+                                // Fail to proceed as there is no value given for the corresponding
+                                // key
+                                pw.println(
+                                        "No value provided for the corresponding key " + key
+                                                + ". There must be an even number of request"
+                                                + " property arguments provided after the -r "
+                                                + "option.");
+                                return -1;
+                            }
+                            key = getNextArg();
+                        }
+
+                    } else {
+                        pw.println("No -r option was provided as second argument so the HTTP "
+                                + "request will have no request properties.");
+                    }
+
+                    mWifiThreadRunner.post(() -> {
+                        mAfcManager.setServerUrlAndRequestPropertyPairs(url, requestProperties);
+                    }, TAG + "#" + cmd);
+
+                    pw.println("The URL is set to " + url);
+                    pw.println("The request properties are set to: ");
+
+                    for (Map.Entry<String, String> requestProperty : requestProperties.entrySet()) {
+                        pw.println("Key: " + requestProperty.getKey() + ", Value: "
+                                + requestProperty.getValue());
+                    }
+                    return 0;
                 case "set-mock-wifimodem-service":
                     String opt = null;
                     String serviceName = null;
@@ -1818,7 +2199,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                                 return -1;
                         }
                     }
-                    mWifiNative.setMockWifiService(serviceName);
+                    mWifiService.setMockWifiService(serviceName);
                     // The result will be checked, must print result "true"
                     pw.print("true");
                     return 0;
@@ -1827,12 +2208,111 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                     return 0;
                 case "set-mock-wifimodem-methods":
                     String methods = getNextArgRequired();
-                    if (mWifiNative.setMockWifiMethods(methods)) {
+                    if (mWifiService.setMockWifiMethods(methods)) {
                         pw.print("true");
                     } else {
                         pw.print("fail to set mock method: " + methods);
                         return -1;
                     }
+                    return 0;
+                case "force-overlay-config-value":
+                    int uid = Binder.getCallingUid();
+                    if (!mWifiInjector.getWifiPermissionsUtil()
+                            .checkNetworkSettingsPermission(Binder.getCallingUid())) {
+                        pw.println("current shell caller Uid " + uid
+                                + " Missing NETWORK_SETTINGS permission");
+                        return -1;
+                    }
+                    WifiResourceCache resourceCache = mContext.getResourceCache();
+                    String type = getNextArgRequired();
+                    String overlayName = getNextArgRequired();
+                    boolean isEnabled = getNextArgRequiredTrueOrFalse("enabled", "disabled");
+                    switch (type) {
+                        case "bool" -> {
+                            boolean value = false;
+                            if (isEnabled) {
+                                value = getNextArgRequiredTrueOrFalse("true", "false");
+                                resourceCache.overrideBooleanValue(overlayName, value);
+                            } else {
+                                resourceCache.restoreBooleanValue(overlayName);
+                            }
+                        }
+                        case "integer" -> {
+                            int value = 0;
+                            if (isEnabled) {
+                                value = Integer.parseInt(getNextArgRequired());
+                                resourceCache.overrideIntegerValue(overlayName, value);
+                            } else {
+                                resourceCache.restoreIntegerValue(overlayName);
+                            }
+                        }
+                        case "string" -> {
+                            String value;
+                            if (isEnabled) {
+                                value = getNextArgRequired();
+                                resourceCache.overrideStringValue(overlayName, value);
+                            } else {
+                                resourceCache.restoreStringValue(overlayName);
+                            }
+                        }
+                        case "string-array" -> {
+                            String[] value;
+                            if (isEnabled) {
+                                value = peekRemainingArgs();
+                                resourceCache.overrideStringArrayValue(overlayName, value);
+                            } else {
+                                resourceCache.restoreStringArrayValue(overlayName);
+                            }
+                        }
+                        case "integer-array" -> {
+                            String[] input;
+                            if (isEnabled) {
+                                input = peekRemainingArgs();
+                                int[] value = new int[input.length];
+                                for (int i = 0; i < input.length; i++) {
+                                    value[i] = Integer.parseInt(input[i]);
+                                }
+
+                                resourceCache.overrideIntArrayValue(overlayName, value);
+                            } else {
+                                resourceCache.restoreIntArrayValue(overlayName);
+                            }
+                        }
+                        default -> {
+                            pw.print("require a valid type of the overlay");
+                            return -1;
+                        }
+                    }
+                    pw.println("true");
+                    return 0;
+                case "get-overlay-config-values":
+                    mContext.getResourceCache().dump(pw);
+                    return 0;
+                case "set-ssid-roaming-mode":
+                    String ssid = getNextArgRequired();
+                    String roamingMode = getNextArgRequired();
+                    String option = getNextOption();
+
+                    WifiSsid wifiSsid;
+                    if (option != null && option.equals("-x")) {
+                        wifiSsid = WifiSsid.fromString(ssid);
+                    } else {
+                        wifiSsid = WifiSsid.fromString("\"" + ssid + "\"");
+                    }
+
+                    int mode;
+                    if (roamingMode.equals("none")) {
+                        mode = ROAMING_MODE_NONE;
+                    } else if (roamingMode.equals("normal")) {
+                        mode = ROAMING_MODE_NORMAL;
+                    } else if (roamingMode.equals("aggressive")) {
+                        mode = ROAMING_MODE_AGGRESSIVE;
+                    } else {
+                        pw.println("Unsupported roaming mode");
+                        return -1;
+                    }
+
+                    mWifiService.setPerSsidRoamingMode(wifiSsid, mode, SHELL_PACKAGE_NAME);
                     return 0;
                 default:
                     return handleDefaultCommands(cmd);
@@ -2025,6 +2505,21 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                     }
                     configBuilder.setChannel(channels.valueAt(0), channels.keyAt(0));
                 }
+            } else if (option.equals("-w")) {
+                String bandwidth = getNextArgRequired();
+                if (bandwidth.equals("20")) {
+                    configBuilder.setMaxChannelBandwidth(SoftApInfo.CHANNEL_WIDTH_20MHZ);
+                } else if (bandwidth.equals("40")) {
+                    configBuilder.setMaxChannelBandwidth(SoftApInfo.CHANNEL_WIDTH_40MHZ);
+                } else if (bandwidth.equals("80")) {
+                    configBuilder.setMaxChannelBandwidth(SoftApInfo.CHANNEL_WIDTH_80MHZ);
+                } else if (bandwidth.equals("160")) {
+                    configBuilder.setMaxChannelBandwidth(SoftApInfo.CHANNEL_WIDTH_160MHZ);
+                } else if (bandwidth.equals("320")) {
+                    configBuilder.setMaxChannelBandwidth(SoftApInfo.CHANNEL_WIDTH_320MHZ);
+                } else {
+                    throw new IllegalArgumentException("Invalid bandwidth option " + bandwidth);
+                }
             } else {
                 pw.println("Ignoring unknown option " + option);
             }
@@ -2191,7 +2686,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         // So, find scan result with the best rssi level to set in the request.
         if (bssid == null && !nullBssid && !noSsid) {
             ScanResult matchingScanResult =
-                    mWifiService.getScanResults(SHELL_PACKAGE_NAME, null)
+                    mScanRequestProxy.getScanResults()
                             .stream()
                             .filter(s -> s.SSID.equals(ssid))
                             .max(Comparator.comparingInt(s -> s.level))
@@ -2266,28 +2761,6 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         return cellChannels;
     }
 
-    private void setAutoJoin(PrintWriter pw, String ssid, boolean allowAutojoin) {
-        // For suggestions, this will work only if the config has already been added
-        // to WifiConfigManager.
-        Bundle extras = new Bundle();
-        if (SdkLevel.isAtLeastS()) {
-            extras.putParcelable(WifiManager.EXTRA_PARAM_KEY_ATTRIBUTION_SOURCE,
-                    mContext.getAttributionSource());
-        }
-        WifiConfiguration retrievedConfig =
-                mWifiService.getPrivilegedConfiguredNetworks(SHELL_PACKAGE_NAME, null, extras)
-                        .getList()
-                        .stream()
-                        .filter(n -> n.SSID.equals(ssid))
-                        .findAny()
-                        .orElse(null);
-        if (retrievedConfig == null) {
-            pw.println("Cannot retrieve config, autojoin setting skipped.");
-            return;
-        }
-        mWifiService.allowAutojoin(retrievedConfig.networkId, allowAutojoin);
-    }
-
     private int sendLinkProbe(PrintWriter pw) throws InterruptedException {
         // Note: should match WifiNl80211Manager#SEND_MGMT_FRAME_TIMEOUT_MS
         final int sendMgmtFrameTimeoutMs = 1000;
@@ -2305,7 +2778,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                         queue.offer("Link probe failed with reason "
                                 + LinkProbeCallback.failureReasonToString(reason));
                     }
-                }, -1));
+                }, -1), TAG + "#sendLinkProbe");
 
         // block until msg is received, or timed out
         String msg = queue.poll(sendMgmtFrameTimeoutMs + 1000, TimeUnit.MILLISECONDS);
@@ -2430,6 +2903,48 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         pw.println("    Enables/disables Wifi on this device.");
         pw.println("  set-scan-always-available enabled|disabled");
         pw.println("    Sets whether scanning should be available even when wifi is off.");
+        pw.println("  connect-network <ssid> open|owe|wpa2|wpa3|wep [<passphrase>] [-x] [-m] "
+                + "[-d] [-b <bssid>] [-r auto|none|persistent|non_persistent]");
+        pw.println("    Connect to a network with provided params and add to saved networks list");
+        pw.println("    <ssid> - SSID of the network");
+        pw.println("    open|owe|wpa2|wpa3|wep - Security type of the network.");
+        pw.println("        - Use 'open' or 'owe' for networks with no passphrase");
+        pw.println("           - 'open' - Open networks (Most prevalent)");
+        pw.println("           - 'owe' - Enhanced open networks");
+        pw.println("        - Use 'wpa2' or 'wpa3' or 'wep' for networks with passphrase");
+        pw.println("           - 'wpa2' - WPA-2 PSK networks (Most prevalent)");
+        pw.println("           - 'wpa3' - WPA-3 PSK networks");
+        pw.println("           - 'wep'  - WEP network. Passphrase should be bytes in hex or encoded"
+                + " into String using UTF-8");
+        pw.println("    -x - Specifies the SSID as hex digits instead of plain text");
+        pw.println("    -m - Mark the network metered.");
+        pw.println("    -d - Mark the network autojoin disabled.");
+        pw.println("    -h - Mark the network hidden.");
+        pw.println("    -p - Mark the network private (not shared).");
+        pw.println("    -b <bssid> - Set specific BSSID.");
+        pw.println("    -r auto|none|persistent|non_persistent - MAC randomization scheme for the"
+                + " network");
+        pw.println("  add-network <ssid> open|owe|wpa2|wpa3|wep [<passphrase>] [-x] [-m] [-d] "
+                + "[-b <bssid>] [-r auto|none|persistent|non_persistent]");
+        pw.println("    Add/update saved network with provided params");
+        pw.println("    <ssid> - SSID of the network");
+        pw.println("    open|owe|wpa2|wpa3|wep - Security type of the network.");
+        pw.println("        - Use 'open' or 'owe' for networks with no passphrase");
+        pw.println("           - 'open' - Open networks (Most prevalent)");
+        pw.println("           - 'owe' - Enhanced open networks");
+        pw.println("        - Use 'wpa2' or 'wpa3' for networks with passphrase");
+        pw.println("           - 'wpa2' - WPA-2 PSK networks (Most prevalent)");
+        pw.println("           - 'wpa3' - WPA-3 PSK networks");
+        pw.println("           - 'wep'  - WEP network. Passphrase should be bytes in hex or encoded"
+                + " into String using UTF-8");
+        pw.println("    -x - Specifies the SSID as hex digits instead of plain text");
+        pw.println("    -m - Mark the network metered.");
+        pw.println("    -d - Mark the network autojoin disabled.");
+        pw.println("    -h - Mark the network hidden.");
+        pw.println("    -p - Mark the network private (not shared).");
+        pw.println("    -b <bssid> - Set specific BSSID.");
+        pw.println("    -r auto|none|persistent|non_persistent - MAC randomization scheme for the"
+                + " network");
         pw.println("  list-scan-results");
         pw.println("    Lists the latest scan results");
         pw.println("  start-scan");
@@ -2441,8 +2956,13 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         pw.println("        - Use list-networks to retrieve <networkId> for the network");
         pw.println("  status");
         pw.println("    Current wifi status");
-        pw.println("  set-verbose-logging enabled|disabled ");
-        pw.println("    Set the verbose logging enabled or disabled");
+        pw.println("  set-verbose-logging enabled|disabled [-l <verbose log level>]");
+        pw.println("    Set the verbose logging enabled or disabled with log level");
+        pw.println("      -l - verbose logging level");
+        pw.println("           0 - verbose logging disabled");
+        pw.println("           1 - verbose logging enabled");
+        pw.println("           2 - verbose logging Show key mode");
+        pw.println("           3 - verbose logging only for Wi-Fi Aware feature");
         pw.println("  is-verbose-logging");
         pw.println("    Check whether verbose logging enabled or disabled");
         pw.println("  start-restricting-auto-join-to-subscription-id subId");
@@ -2515,43 +3035,6 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         pw.println("  reset-connected-score");
         pw.println("    Turns on the default connected scorer.");
         pw.println("    Note: Will clear any external scorer set.");
-        pw.println("  start-softap <ssid> (open|wpa2|wpa3|wpa3_transition|owe|owe_transition) "
-                + "<passphrase> [-b 2|5|6|any|bridged|bridged_2_5|bridged_2_6|bridged_5_6] [-x]"
-                + " [-f <int> [<int>]]");
-        pw.println("    Start softap with provided params");
-        pw.println("    Note that the shell command doesn't activate internet tethering. In some "
-                + "devices, internet sharing is possible when Wi-Fi STA is also enabled and is"
-                + "associated to another AP with internet access.");
-        pw.println("    <ssid> - SSID of the network");
-        pw.println("    open|wpa2|wpa3|wpa3_transition|owe|owe_transition - Security type of the "
-                + "network.");
-        pw.println("        - Use 'open', 'owe', 'owe_transition' for networks with no passphrase");
-        pw.println("        - Use 'wpa2', 'wpa3', 'wpa3_transition' for networks with passphrase");
-        pw.println("    -b 2|5|6|any|bridged|bridged_2_5|bridged_2_6|bridged_5_6 - select the"
-                + " preferred bands.");
-        pw.println("        - Use '2' to select 2.4GHz band as the preferred band");
-        pw.println("        - Use '5' to select 5GHz band as the preferred band");
-        pw.println("        - Use '6' to select 6GHz band as the preferred band");
-        pw.println("        - Use 'any' to indicate no band preference");
-        pw.println("        - Use 'bridged' to indicate bridged AP which enables APs on both "
-                + "2.4G + 5G");
-        pw.println("        - Use 'bridged_2_5' to indicate bridged AP which enables APs on both "
-                + "2.4G + 5G");
-        pw.println("        - Use 'bridged_2_6' to indicate bridged AP which enables APs on both "
-                + "2.4G + 6G");
-        pw.println("        - Use 'bridged_5_6' to indicate bridged AP which enables APs on both "
-                + "5G + 6G");
-        pw.println("    Note: If the band option is not provided, 2.4GHz is the preferred band.");
-        pw.println("          The exact channel is auto-selected by FW unless overridden by "
-                + "force-softap-channel command or '-f <int> <int>' option");
-        pw.println("    -f <int> <int> - force exact channel frequency for operation channel");
-        pw.println("    Note: -f <int> <int> - must be the last option");
-        pw.println("          For example:");
-        pw.println("          Use '-f 2412' to enable single Soft Ap on 2412");
-        pw.println("          Use '-f 2412 5745' to enable bridged dual Soft Ap on 2412 and 5745");
-        pw.println("    -x - Specifies the SSID as hex digits instead of plain text (T and above)");
-        pw.println("  stop-softap");
-        pw.println("    Stop softap (hotspot)");
         pw.println("  pmksa-flush <networkId>");
         pw.println("        - Flush the local PMKSA cache associated with the network id."
                 + " Use list-networks to retrieve <networkId> for the network");
@@ -2609,59 +3092,53 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         pw.println("  get-ipreach-disconnect");
         pw.println("    Gets setting of CMD_IP_REACHABILITY_LOST events triggering disconnects.");
         pw.println("  take-bugreport");
-        pw.println("    take bugreport through betterBug. "
-                + "If it failed, take bugreport through bugreport manager.");
-        pw.println("  get-allowed-channel");
+        pw.println(
+                "    take bugreport through betterBug. "
+                        + "If it failed, take bugreport through bugreport manager.");
+        pw.println("  get-allowed-channel [-b 1|6|7|8|15|16|31]");
         pw.println(
                 "    get allowed channels in each operation mode from wifiManager if available. "
                         + "Otherwise, it returns from wifiScanner.");
+        pw.println("    -b - set the band in which channels are allowed");
+        pw.println("       '1'  - band 2.4 GHz");
+        pw.println("       '6'  - band 5 GHz with DFS channels");
+        pw.println("       '7'  - band 2.4 and 5 GHz with DFS channels");
+        pw.println("       '8'  - band 6 GHz");
+        pw.println("       '15' - band 2.4, 5, and 6 GHz with DFS channels");
+        pw.println("       '16' - band 60 GHz");
+        pw.println("       '31' - band 2.4, 5, 6 and 60 GHz with DFS channels");
+        pw.println("  get-cached-scan-data");
+        pw.println("    Gets scan data cached by the firmware");
+        pw.println("  force-overlay-config-value bool|integer|string|integer-array|string-array "
+                + "<overlayName> enabled|disabled <configValue>");
+        pw.println("    Force overlay to a specified value.");
+        pw.println("    bool|integer|string|integer-array|string-array - specified the type of the "
+                + "overlay");
+        pw.println("    <overlayName> - name of the overlay whose value is overridden.");
+        pw.println("    enabled|disabled: enable the override or disable it and revert to using "
+                + "the built-in value.");
+        pw.println("    <configValue> - override value of the overlay."
+                + "Must match the overlay type");
+        pw.println("  get-overlay-config-values");
+        pw.println("    Get current overlay value in resource cache.");
+        pw.println("  get-softap-supported-features");
+        pw.println("    Gets softap supported features. Will print 'wifi_softap_acs_supported'");
+        pw.println("    and/or 'wifi_softap_wpa3_sae_supported',");
+        pw.println("    and/or 'wifi_softap_bridged_ap_supported',");
+        pw.println("    and/or 'wifi_softap_bridged_ap_with_sta_supported',");
+        pw.println("    each on a separate line.");
     }
 
     private void onHelpPrivileged(PrintWriter pw) {
-        pw.println("  connect-network <ssid> open|owe|wpa2|wpa3|wep [<passphrase>] [-x] [-m] "
-                + "[-d] [-b <bssid>] [-r auto|none|persistent|non_persistent]");
-        pw.println("    Connect to a network with provided params and add to saved networks list");
-        pw.println("    <ssid> - SSID of the network");
-        pw.println("    open|owe|wpa2|wpa3|wep - Security type of the network.");
-        pw.println("        - Use 'open' or 'owe' for networks with no passphrase");
-        pw.println("           - 'open' - Open networks (Most prevalent)");
-        pw.println("           - 'owe' - Enhanced open networks");
-        pw.println("        - Use 'wpa2' or 'wpa3' or 'wep' for networks with passphrase");
-        pw.println("           - 'wpa2' - WPA-2 PSK networks (Most prevalent)");
-        pw.println("           - 'wpa3' - WPA-3 PSK networks");
-        pw.println("           - 'wep'  - WEP network. Passphrase should be bytes in hex or encoded"
-                + " into String using UTF-8");
-        pw.println("    -x - Specifies the SSID as hex digits instead of plain text");
-        pw.println("    -m - Mark the network metered.");
-        pw.println("    -d - Mark the network autojoin disabled.");
-        pw.println("    -h - Mark the network hidden.");
-        pw.println("    -p - Mark the network private (not shared).");
-        pw.println("    -b <bssid> - Set specific BSSID.");
-        pw.println("    -r auto|none|persistent|non_persistent - MAC randomization scheme for the"
-                + " network");
-        pw.println("  add-network <ssid> open|owe|wpa2|wpa3|wep [<passphrase>] [-x] [-m] [-d] "
-                + "[-b <bssid>] [-r auto|none|persistent|non_persistent]");
-        pw.println("    Add/update saved network with provided params");
-        pw.println("    <ssid> - SSID of the network");
-        pw.println("    open|owe|wpa2|wpa3|wep - Security type of the network.");
-        pw.println("        - Use 'open' or 'owe' for networks with no passphrase");
-        pw.println("           - 'open' - Open networks (Most prevalent)");
-        pw.println("           - 'owe' - Enhanced open networks");
-        pw.println("        - Use 'wpa2' or 'wpa3' for networks with passphrase");
-        pw.println("           - 'wpa2' - WPA-2 PSK networks (Most prevalent)");
-        pw.println("           - 'wpa3' - WPA-3 PSK networks");
-        pw.println("           - 'wep'  - WEP network. Passphrase should be bytes in hex or encoded"
-                + " into String using UTF-8");
-        pw.println("    -x - Specifies the SSID as hex digits instead of plain text");
-        pw.println("    -m - Mark the network metered.");
-        pw.println("    -d - Mark the network autojoin disabled.");
-        pw.println("    -h - Mark the network hidden.");
-        pw.println("    -p - Mark the network private (not shared).");
-        pw.println("    -b <bssid> - Set specific BSSID.");
-        pw.println("    -r auto|none|persistent|non_persistent - MAC randomization scheme for the"
-                + " network");
-        pw.println("  set-poll-rssi-interval-msecs <int>");
-        pw.println("    Sets the interval between RSSI polls to <int> milliseconds.");
+        pw.println("  set-poll-rssi-interval-msecs <int> [<int>]");
+        pw.println("    Sets the interval between RSSI polls to the specified value(s), in "
+                + "milliseconds.");
+        pw.println("    When only one value is specified, set the interval to that value. "
+                + "When two values are specified, set the regular (short) interval to the first "
+                + "value, and set the long interval to the second value. Note that the "
+                + "enabling/disabling of auto adjustment between the two intervals is handled by "
+                + "the respective flags. If the auto adjustment is disabled, it is equivalent to "
+                + "only specifying the first value, and then setting the interval to that value");
         pw.println("  get-poll-rssi-interval-msecs");
         pw.println("    Gets current interval between RSSI polls, in milliseconds.");
         pw.println("  force-hi-perf-mode enabled|disabled");
@@ -2684,10 +3161,52 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         pw.println("    Clears the user disabled networks list.");
         pw.println("  send-link-probe");
         pw.println("    Manually triggers a link probe.");
+        pw.println(
+                "  start-softap <ssid> (open|wpa2|wpa3|wpa3_transition|owe|owe_transition)"
+                        + " <passphrase> [-b 2|5|6|any|bridged|bridged_2_5|bridged_2_6|bridged_5_6]"
+                        + " [-x] [-w 20|40|80|160|320] [-f <int> [<int>]]");
+        pw.println("    Start softap with provided params");
+        pw.println("    Note that the shell command doesn't activate internet tethering. In some "
+                + "devices, internet sharing is possible when Wi-Fi STA is also enabled and is"
+                + "associated to another AP with internet access.");
+        pw.println("    <ssid> - SSID of the network");
+        pw.println("    open|wpa2|wpa3|wpa3_transition|owe|owe_transition - Security type of the "
+                + "network.");
+        pw.println("        - Use 'open', 'owe', 'owe_transition' for networks with no passphrase");
+        pw.println("        - Use 'wpa2', 'wpa3', 'wpa3_transition' for networks with passphrase");
+        pw.println("    -b 2|5|6|any|bridged|bridged_2_5|bridged_2_6|bridged_5_6 - select the"
+                + " preferred bands.");
+        pw.println("        - Use '2' to select 2.4GHz band as the preferred band");
+        pw.println("        - Use '5' to select 5GHz band as the preferred band");
+        pw.println("        - Use '6' to select 6GHz band as the preferred band");
+        pw.println("        - Use 'any' to indicate no band preference");
+        pw.println("        - Use 'bridged' to indicate bridged AP which enables APs on both "
+                + "2.4G + 5G");
+        pw.println("        - Use 'bridged_2_5' to indicate bridged AP which enables APs on both "
+                + "2.4G + 5G");
+        pw.println("        - Use 'bridged_2_6' to indicate bridged AP which enables APs on both "
+                + "2.4G + 6G");
+        pw.println("        - Use 'bridged_5_6' to indicate bridged AP which enables APs on both "
+                + "5G + 6G");
+        pw.println("    Note: If the band option is not provided, 2.4GHz is the preferred band.");
+        pw.println("          The exact channel is auto-selected by FW unless overridden by "
+                + "force-softap-channel command or '-f <int> <int>' option");
+        pw.println("    -f <int> <int> - force exact channel frequency for operation channel");
+        pw.println("    Note: -f <int> <int> - must be the last option");
+        pw.println("          For example:");
+        pw.println("          Use '-f 2412' to enable single Soft Ap on 2412");
+        pw.println("          Use '-f 2412 5745' to enable bridged dual Soft Ap on 2412 and 5745");
+        pw.println("    -x - Specifies the SSID as hex digits instead of plain text (T and above)");
+        pw.println("    -w 20|40|80|160|320 - select the maximum channel bandwidth (MHz)");
+        pw.println("  stop-softap");
+        pw.println("    Stop softap (hotspot)");
         pw.println("  force-softap-band enabled <int> | disabled");
         pw.println("    Forces soft AP band to 2|5|6");
-        pw.println("  force-softap-channel enabled <int> | disabled");
-        pw.println("    Sets whether soft AP channel is forced to <int> MHz");
+        pw.println("  force-softap-channel enabled <int> | disabled [-w <maxBandwidth>]");
+        pw.println("    Sets whether soft AP channel is forced to <int> MHz [-w <maxBandwidth>]");
+        pw.println("        -w 0|20|40|80|160|320 - select the maximum channel bandwidth (MHz)");
+        pw.println("         Note: If the bandwidth option is not provided or set to 0, framework"
+                + " will set the maximum bandwidth to auto, allowing HAL to select the bandwidth");
         pw.println("    or left for normal   operation.");
         pw.println("  force-country-code enabled <two-letter code> | disabled ");
         pw.println("    Sets country code to <two-letter code> or left for normal value");
@@ -2696,12 +3215,6 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         pw.println("    Sets whether wifi watchdog should trigger recovery");
         pw.println("  get-wifi-watchdog");
         pw.println("    Gets setting of wifi watchdog trigger recovery.");
-        pw.println("  get-softap-supported-features");
-        pw.println("    Gets softap supported features. Will print 'wifi_softap_acs_supported'");
-        pw.println("    and/or 'wifi_softap_wpa3_sae_supported',");
-        pw.println("    and/or 'wifi_softap_bridged_ap_supported',");
-        pw.println("    and/or 'wifi_softap_bridged_ap_with_sta_supported',");
-        pw.println("    each on a separate line.");
         pw.println("  settings-reset");
         pw.println("    Initiates wifi settings reset");
         pw.println("  allow-root-to-get-local-only-cmm enabled|disabled");
@@ -2796,9 +3309,10 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         pw.println("    -h - Enable scanning for hidden networks.");
         pw.println("  set-passpoint-enabled enabled|disabled");
         pw.println("    Sets whether Passpoint should be enabled or disabled");
-        pw.println("  start-lohs <ssid> (open|wpa2|wpa3|wpa3_transition|owe|owe_transition) "
-                + "<passphrase> [-b 2|5|6|any|bridged|bridged_2_5|bridged_2_6|bridged_5_6] [-x]"
-                + " [-f <int> [<int>]])");
+        pw.println(
+                "  start-lohs <ssid> (open|wpa2|wpa3|wpa3_transition|owe|owe_transition)"
+                        + " <passphrase> [-b 2|5|6|any|bridged|bridged_2_5|bridged_2_6|bridged_5_6]"
+                        + " [-x] [-w 20|40|80|160|320] [-f <int> [<int>]])");
         pw.println("    Start local only softap (hotspot) with provided params");
         pw.println("    <ssid> - SSID of the network");
         pw.println("    open|wpa2|wpa3|wpa3_transition|owe|owe_transition - Security type of the "
@@ -2828,6 +3342,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         pw.println("          Use '-f 2412' to enable single Soft Ap on 2412");
         pw.println("          Use '-f 2412 5745' to enable bridged dual lohs on 2412 and 5745");
         pw.println("    -x - Specifies the SSID as hex digits instead of plain text (T and above)");
+        pw.println("    -w 20|40|80|160|320 - select the maximum bandwidth (MHz)");
         pw.println("  stop-softap");
         pw.println("    Stop softap (hotspot)");
         pw.println("    Note: If the band option is not provided, 2.4GHz is the preferred band.");
@@ -2839,6 +3354,8 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         pw.println("    Requests to include a non-quoted UTF-8 SSID in PNO scans");
         pw.println("  clear-pno-request");
         pw.println("    Clear the PNO scan request.");
+        pw.println("  set-pno-scan enabled|disabled");
+        pw.println("    Set the PNO scan enabled or disabled.");
         pw.println("  start-dpp-enrollee-responder [-i <info>] [-c <curve>]");
         pw.println("    Start DPP Enrollee responder mode.");
         pw.println("    -i - Device Info to be used in DPP Bootstrapping URI");
@@ -2856,6 +3373,42 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         pw.println("    Clears the SSID translation charsets set in set-ssid-charset.");
         pw.println("  get-last-caller-info api_type");
         pw.println("    Get the last caller information for a WifiManager.ApiType");
+        pw.println("  trigger-afc-location-update <longitude> <latitude> <height>");
+        pw.println("    Passes in longitude, latitude, and height values as arguments of type "
+                + "double for a fake location update to trigger framework logic to query the AFC "
+                + "server. The longitude and latitude pair is in decimal degrees and the height"
+                + " is the altitude in meters. The server URL needs to have been previously set "
+                + "with the configure-afc-server shell command.");
+        pw.println("    Example: trigger-afc-location-update 37.425056 -122.984157 3.043");
+        pw.println("  set-afc-channel-allowance -e <secs_until_expiry> [-f <low_freq>,<high_freq>,"
+                + "<psd>:...|none] [-c <operating_class>,<channel_cfi>,<max_eirp>:...|none]");
+        pw.println("    Sets the allowed AFC channels and frequencies.");
+        pw.println("    -e - Seconds until the availability expires.");
+        pw.println("    -f - Colon-separated list of available frequency info.");
+        pw.println("      Note: each frequency should contain 3 comma separated values, where "
+                + "the first is the low frequency (MHz), the second the high frequency (MHz), the "
+                + "third the max PSD (dBm per MHz). To set an empty frequency list, enter \"none\" "
+                + "in place of the list of allowed frequencies.");
+        pw.println("    -c - Colon-separated list of available channel info.");
+        pw.println("      Note: each channel should contain 3 comma separated values, where "
+                + "the first is the global operating class, the second the channel CFI, "
+                + "the third the max EIRP in dBm. To set an empty channel list, enter \"none\" in "
+                + "place of the list of allowed channels.");
+        pw.println("    Example: set-afc-channel-allowance -e 30 -c none -f "
+                + "5925,6020,23:6020,6050,1");
+        pw.println("  configure-afc-server <url> [-r [<request property key> <request property "
+                + "value>] ...]");
+        pw.println("    Sets the server URL and request properties for the HTTP request which the "
+                + "AFC Client will query.");
+        pw.println("    -r - HTTP header fields that come in pairs of key and value which are added"
+                + " to the HTTP request. Must be an even number of arguments. If there is no -r "
+                + "option provided or no arguments provided after the -r option, then set the "
+                + "request properties to none in the request.");
+        pw.println("    Example: configure-afc-server https://testURL -r key1 value1 key2 value2");
+        pw.println("  set-ssid-roaming-mode <ssid> none|normal|aggressive [-x]");
+        pw.println("    Sets the roaming mode for the given SSID.");
+        pw.println("    -x - Specifies the SSID as hex digits instead of plain text.");
+        pw.println("    Example: set-ssid-roaming-mode test_ssid aggressive");
     }
 
     @Override
